# terminal-typing-lab

./: .editorconfig  Cargo.toml  LICENSE  README.md  typos.toml
.github/workflows/: check.yml
src/: action.rs  corpus.rs  main.rs  model.rs  terminal.rs  view.rs
