[package]
name = "terminal_typing_lab"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A terminal typing tester/trainer"
repository = "https://github.com/alex-tdrn/terminal_typing_lab"

[[bin]]
name = "ttl"
path = "src/main.rs"

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.26.0", features = ["all-widgets"] }
unicode-segmentation = "1.11.0"
unicode-normalization = "0.1.22"
rand = "0.8.5"
